buscando somente os episodios de numero a partir de uma data e personalizando a resposta modificando a forma de mostrar a data para o formato Brasileiro